[wizard] Better handling when no adapter is usable

Be more careful if at any moment in the Discover page
the Adapter stops being usable.

BUG:329403